--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <!--
+        This is an example of an application-wide init param. It's called a 
+        ServletContext init param. You can have as many init params as you want 
+        but there is only one servlet context; remember, all of these params 
+        are global to your app and can be accessed from any JSP page or
+        servlet, which may not be what you want. If not, see below.
+    -->
+    <context-param>
+        <param-name>webmasterEmail</param-name>
+        <param-value>Test</param-value>
+    </context-param>
 
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-    
-    <context-param>
-        <param-name>dbStrategy</param-name>
-        <param-value>edu.wctc.bmh.bookapp2.model.MySQLDatabase</param-value>
-    </context-param>
-    <context-param>
-        <param-name>driverClass</param-name>
-        <param-value>com.mysql.jdbc.Driver</param-value>
-    </context-param>
-    
     <!-- Begin Spring-specific configuration -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -28,30 +26,39 @@
     </listener>
     <!-- END Spring configuration -->
     
+    <!-- begin additional Spring Security config -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!-- end Spring security config -->
     
     <servlet>
-        
+        <!-- first alias, private to config -->
         <servlet-name>AuthorController</servlet-name>
         <servlet-class>edu.wctc.bmh.bookapp2.controller.AuthorController</servlet-class>
-        <init-param>
-            <param-name>authorDao</param-name>
-            <param-value>edu.wctc.bmh.bookapp2.model.AuthorDAO</param-value>
-        </init-param>
-        <init-param>
-            <param-name>url</param-name>
-            <param-value>jdbc:mysql://localhost:3306/book</param-value>
-        </init-param>
-        <init-param>
-            <param-name>userName</param-name>
-            <param-value>root</param-value>
-        </init-param>
-        <init-param>
-            <param-name>password</param-name>
-            <param-value>admin</param-value>
-        </init-param>
+        <!-- must be last item in servlet config -->
         <load-on-startup>1</load-on-startup>
     </servlet>
-    
+    <servlet>
+        <servlet-name>BookController</servlet-name>
+        <servlet-class>edu.wctc.bmh.bookapp2.controller.BookController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <!-- reference private config alias -->
+        <servlet-name>AuthorController</servlet-name>
+        <!-- second alias is the one you use in your links -->
+        <url-pattern>/AuthorController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BookController</servlet-name>
+        <url-pattern>/BookController</url-pattern>
+    </servlet-mapping>
+
     <session-config>
         <session-timeout>
             30
